# StructuredPredictionError

./: .gitignore  .gitmodules  BLOOCVTest.ipynb  BernoulliTest.ipynb  BlurForest-Copy1.ipynb  BlurForest.ipynb  BlurLasso.ipynb  BlurLinearSims-Copy1.ipynb  BlurLinearSims.ipynb  BlurTree.ipynb  CBSims.ipynb  GLSRFSims.ipynb  KFCVTest-Copy1.ipynb  KFCVTest.ipynb  LICENSE  PoissonTest.ipynb  Prediction error note.ipynb  README.md  ScriptSims.Rmd  ScriptSims.ipynb  SlidesBaggedRelaxedLassoFairSims.ipynb  SlidesBaggedRelaxedLassoSims-Copy1.ipynb  SlidesBaggedRelaxedLassoSims.ipynb  SlidesLinearFairSims.ipynb  SlidesLinearSims-Copy1.ipynb  SlidesLinearSims.ipynb  SlidesRFFairSims.ipynb  SlidesRFSims-Copy1.ipynb  SlidesRandomForestSims-Copy1.ipynb  SlidesRandomForestSims.ipynb  SlidesRelaxedLassoFairSims.ipynb  SlidesRelaxedLassoSims.ipynb  SlidesTreeFairSims.ipynb  TestSims.Rmd  TestSims.ipynb  environment.yml  pyproject.toml
5_11_prez_nbs/: SlidesBaggedRelaxedLassoSims.ipynb  SlidesRFFairSims.ipynb  SlidesRFSims.ipynb  SlidesRelaxedLassoSims.ipynb
current_notebooks/: LinearDiffCovsSims.ipynb  RFDiffCovsSims.ipynb  RelaxedLassoDiffCovsSims.ipynb  SlidesBaggedRelaxedLassoFairSims.ipynb  SlidesBaggedRelaxedLassoSims.ipynb  SlidesLinearFairSims.ipynb  SlidesRFSims.ipynb  SlidesRelaxedLassoFairSims.ipynb  SlidesRelaxedLassoSims.ipynb  Untitled.ipynb
diff_covs/: LinearDiffCovsSims.Rmd  LinearDiffCovsSims.html  LinearDiffCovsSims.ipynb  RFDiffCovsSims.ipynb  RelaxedLassoDiffCovsSims.ipynb
doc/: BLOOCVTest.ipynb  CVCorrections.ipynb  KFCVTest.ipynb  LinearModel-LowLowDim.ipynb  LinearModel.ipynb  LinearModel_Friedman.ipynb  RF_Friedman_NOTDONE.ipynb  RelaxedLasso.ipynb  RelaxedLasso_Friedman.ipynb  Tree_Friedman_NOTDONE.ipynb  data_generation.py  mse_estimator.py  plotting_utils.py
docs/: api_reference.html  data_generation.py  fitting_models.py  genindex.html  index.html  mse_estimator.py  objects.inv  plotting_utils.py  run_sims.py  search.html  searchindex.js  sim_utils.py  sims_base_config.py  user_guide.html
(+1381 files in other folders)
