[tool.poetry]
name = "spe"
version = "0.1.0"
description = "Tool for estimating prediction error"
authors = ["Kevin Fry <kevinbfry@stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
pandas= "^1.3.5"
scipy = "^1.8.0"
papermill = ">=2.0.0"
pytest = "^7" 
scikit-gstat= "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
