[tool.poetry]
name = "spe"
version = "0.1.0"
description = "Tool for estimating prediction error"
authors = ["Kevin Fry <kevinbfry@stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.22.3"
scipy = ">=1.11.4"
papermill = ">=2.0.0"
pytest = ">=7" 
numba = ">=0.56.3"
scikit-gstat = ">=1.0.2"
llvmlite = ">=0.39.1"
scikit-learn = {git = "https://github.com/kevinbfry/scikit-learn.git"}

[tool.poetry.doc.dependencies]
pandas= ">=1.3.5"
tqdm = ">=4.66.1"
xgboost = ">=2.0.3"
plotly = ">=5.18.0"

[tool.poetry.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
